--- a/index.html
+++ b/index.html
@@ -2,10 +2,47 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>File Table with Pico.css</title>
+  <!-- Pico.css CDN -->
+  <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
 </head>
 <body>
- <table> <tr><td>  Anthony </td></tr></table> 
+
+  <main class="container">
+    <h1>Files</h1>
+    
+    <table>
+      <thead>
+        <tr>
+          <th>File Icon</th>
+          <th>File Name</th>
+          <th>File Type</th>
+          <th>File Size</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><img src="https://img.icons8.com/ios-filled/24/000000/pdf.png" alt="PDF Icon"></td>
+          <td>Annual_Report.pdf</td>
+          <td>PDF</td>
+          <td>1.2 MB</td>
+        </tr>
+        <tr>
+          <td><img src="https://img.icons8.com/ios-filled/24/000000/microsoft-word.png" alt="Word Icon"></td>
+          <td>Meeting_Notes.docx</td>
+          <td>Word Document</td>
+          <td>850 KB</td>
+        </tr>
+        <tr>
+          <td><img src="https://img.icons8.com/ios-filled/24/000000/image.png" alt="Image Icon"></td>
+          <td>Design.png</td>
+          <td>Image</td>
+          <td>430 KB</td>
+        </tr>
+      </tbody>
+    </table>
+  </main>
+
 </body>
 </html>
+
