--- a/index.html
+++ b/index.html
@@ -2,47 +2,43 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>File Table with Pico.css</title>
-  <!-- Pico.css CDN -->
-  <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+
+ <!-- Pico.css -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@picocss/pico@2.1.1/css/pico.min.css"
+    >
+
+
 </head>
 <body>
-
-  <main class="container">
-    <h1>Files</h1>
-    
-    <table>
-      <thead>
-        <tr>
-          <th>File Icon</th>
-          <th>File Name</th>
-          <th>File Type</th>
-          <th>File Size</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td><img src="https://img.icons8.com/ios-filled/24/000000/pdf.png" alt="PDF Icon"></td>
-          <td>Annual_Report.pdf</td>
-          <td>PDF</td>
-          <td>1.2 MB</td>
-        </tr>
-        <tr>
-          <td><img src="https://img.icons8.com/ios-filled/24/000000/microsoft-word.png" alt="Word Icon"></td>
-          <td>Meeting_Notes.docx</td>
-          <td>Word Document</td>
-          <td>850 KB</td>
-        </tr>
-        <tr>
-          <td><img src="https://img.icons8.com/ios-filled/24/000000/image.png" alt="Image Icon"></td>
-          <td>Design.png</td>
-          <td>Image</td>
-          <td>430 KB</td>
-        </tr>
-      </tbody>
-    </table>
-  </main>
-
+<table style="border: 1px solid #000; border-collapse: collapse; width: 100%;">
+  <tr>
+    <th style="border: 1px solid #000;">File Icon</th>
+    <th style="border: 1px solid #000;">File Name</th>
+    <th style="border: 1px solid #000;">File Type</th>
+    <th style="border: 1px solid #000;">File Size</th>
+  </tr>
+  <tr>
+    <td style="border: 1px solid #000; text-align: center;">📄</td>
+    <td style="border: 1px solid #000;">index.html</td>
+    <td style="border: 1px solid #000;">HTML</td>
+    <td style="border: 1px solid #000;">2 KB</td>
+  </tr>
+  <tr>
+    <td style="border: 1px solid #000; text-align: center;">📄</td>
+    <td style="border: 1px solid #000;">index.css</td>
+    <td style="border: 1px solid #000;">CSS</td>
+    <td style="border: 1px solid #000;">1 KB</td>
+  </tr>
+  <tr>
+    <td style="border: 1px solid #000; text-align: center;">📄</td>
+    <td style="border: 1px solid #000;">index.js</td>
+    <td style="border: 1px solid #000;">JavaScript</td>
+    <td style="border: 1px solid #000;">3 KB</td>
+  </tr>
+</table>
 </body>
 </html>
-
