--- a/index.html
+++ b/index.html
@@ -4,33 +4,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-
+ </head>
+<body>
+  <table style="border: 1px solid #000; border-collapse: collapse; width: 100%;">
+    <tr>
+      <th style="border: 1px solid #000;">File Icon</th>
+      <th style="border: 1px solid #000;">File Name</th>
+      <th style="border: 1px solid #000;">File Type</th>
+      <th style="border: 1px solid #000;">File Size</th>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #000; text-align: center;">📄</td>
+      <td style="border: 1px solid #000;">index.html</td>
+      <td style="border: 1px solid #000;">HTML</td>
+      <td style="border: 1px solid #000;">2 KB</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #000; text-align: center;">📄</td>
+      <td style="border: 1px solid #000;">index.css</td>
+      <td style="border: 1px solid #000;">CSS</td>
+      <td style="border: 1px solid #000;">1 KB</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #000; text-align: center;">📄</td>
+      <td style="border: 1px solid #000;">index.js</td>
+      <td style="border: 1px solid #000;">JavaScript</td>
+      <td style="border: 1px solid #000;">3 KB</td>
+    </tr>
+  </table>
+</body>
+</html>
  <!-- Pico.css -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@picocss/pico@2.1.1/css/pico.min.css"
     >
 
-</head>
-<body>
-<table>
-<tr>
-<th>File Icon</th>
-<th>File Name</th>
-<th>File Type</th>
-<th>File Size </th>
-</tr>
-<tr>
-<td>Alfreds Futterkiste</td>
-<td>Maria Anders</td>
-<td>Germany</td>
-</tr>
-<tr>
-<td>Centro comercial Moctezuma</td>
-<td>Francisco Chang</td>
-<td>Mexico</td>
-</tr>
-</table>
-</body>
-</html>
+
 
