--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
       <td style="border: 1px solid #000;">JavaScript</td>
       <td style="border: 1px solid #000;">3 KB</td>
     </tr>
+
+    <tr>
+      <td style="border: 1px solid #000; text-align: center;">📄</td>
+      <td style="border: 1px solid #000;">index.pdf</td>
+      <td style="border: 1px solid #000;">PDF</td>
+      <td style="border: 1px solid #000;">3 KB</td>
+    </tr>
   </table>
 </body>
 </html>
