--- a/index.html
+++ b/index.html
@@ -11,39 +11,57 @@
     >
  </head>
 <body>
-  <table style="border: 1px solid #000; border-collapse: collapse; width: 100%;">
-    <tr>
-      <th style="border: 1px solid #000;">File Icon</th>
-      <th style="border: 1px solid #000;">File Name</th>
-      <th style="border: 1px solid #000;">File Type</th>
-      <th style="border: 1px solid #000;">File Size</th>
-    </tr>
-    <tr>
-      <td style="border: 1px solid #000; text-align: center;">📄</td>
-      <td style="border: 1px solid #000;">index.html</td>
-      <td style="border: 1px solid #000;">HTML</td>
-      <td style="border: 1px solid #000;">2 KB</td>
-    </tr>
-    <tr>
-      <td style="border: 1px solid #000; text-align: center;">📄</td>
-      <td style="border: 1px solid #000;">index.css</td>
-      <td style="border: 1px solid #000;">CSS</td>
-      <td style="border: 1px solid #000;">1 KB</td>
-    </tr>
-    <tr>
-      <td style="border: 1px solid #000; text-align: center;">📄</td>
-      <td style="border: 1px solid #000;">index.js</td>
-      <td style="border: 1px solid #000;">JavaScript</td>
-      <td style="border: 1px solid #000;">3 KB</td>
-    </tr>
-
-    <tr>
-      <td style="border: 1px solid #000; text-align: center;">📄</td>
-      <td style="border: 1px solid #000;">index.pdf</td>
-      <td style="border: 1px solid #000;">PDF</td>
-      <td style="border: 1px solid #000;">3 KB</td>
-    </tr>
-  </table>
+  <section id="tables">
+        <h2>Tables</h2>
+        <div class="overflow-auto">
+          <table class="striped">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Heading</th>
+                <th scope="col">Heading</th>
+                <th scope="col">Heading</th>
+                <th scope="col">Heading</th>
+                <th scope="col">Heading</th>
+                <th scope="col">Heading</th>
+                <th scope="col">Heading</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td>Cell</td>
+                <td>Cell</td>
+                <td>Cell</td>
+                <td>Cell</td>
+                <td>Cell</td>
+                <td>Cell</td>
+                <td>Cell</td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>Cell</td>
+                <td>Cell</td>
+                <td>Cell</td>
+                <td>Cell</td>
+                <td>Cell</td>
+                <td>Cell</td>
+                <td>Cell</td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td>Cell</td>
+                <td>Cell</td>
+                <td>Cell</td>
+                <td>Cell</td>
+                <td>Cell</td>
+                <td>Cell</td>
+                <td>Cell</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </section>
 </body>
 </html>
  
