--- a/index.html
+++ b/index.html
@@ -17,22 +17,15 @@
           <table class="striped">
             <thead>
               <tr>
-                <th scope="col">#</th>
-                <th scope="col">Heading</th>
-                <th scope="col">Heading</th>
-                <th scope="col">Heading</th>
-                <th scope="col">Heading</th>
-                <th scope="col">Heading</th>
-                <th scope="col">Heading</th>
-                <th scope="col">Heading</th>
+                <th scope="col">File icon</th>
+                <th scope="col">File name</th>
+                <th scope="col">File type</th>
+                <th scope="col">File size</th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <th scope="row">1</th>
-                <td>Cell</td>
-                <td>Cell</td>
-                <td>Cell</td>
                 <td>Cell</td>
                 <td>Cell</td>
                 <td>Cell</td>
@@ -44,9 +37,6 @@
                 <td>Cell</td>
                 <td>Cell</td>
                 <td>Cell</td>
-                <td>Cell</td>
-                <td>Cell</td>
-                <td>Cell</td>
               </tr>
               <tr>
                 <th scope="row">3</th>
@@ -54,11 +44,23 @@
                 <td>Cell</td>
                 <td>Cell</td>
                 <td>Cell</td>
+                </tr>
+              <tr>
+                <th scope="row">4</th>
                 <td>Cell</td>
                 <td>Cell</td>
                 <td>Cell</td>
-              </tr>
-            </tbody>
+                <td>Cell</td>
+                </tr>
+              <tr>
+                <th scope="row">5</th>
+                <td>Cell</td>
+                <td>Cell</td>
+                <td>Cell</td>
+                <td>Cell</td>
+                </tr>
+              <tr>
+           </tbody>
           </table>
         </div>
       </section>
