--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     >
  </head>
 <body>
+  <tbody>
   <section id="tables">
         <h2>Tables</h2>
         <div class="overflow-auto">
@@ -25,7 +26,6 @@
             </thead>
             <tbody>
           </table>
-                
                 <th scope="row">1</th>
                 <td>Cell</td>
                 <td>Cell</td>
