--- a/index.html
+++ b/index.html
@@ -15,53 +15,26 @@
   <section id="tables">
         <h2>Tables</h2>
         <div class="overflow-auto">
-          <table class="striped">
+          <table>
             <thead>
               <tr>
-                <th scope="col">File icon</th>
-                <th scope="col">File name</th>
-                <th scope="col">File type</th>
-                <th scope="col">File size</th>
+                <th>Header 1</th>
+                <th>Header 2</th>
+                <th>Header 3</th>
               </tr>
             </thead>
             <tbody>
-          </table>
-                <th scope="row">1</th>
-                <td>Cell</td>
-                <td>Cell</td>
-                <td>Cell</td>
-                <td>Cell</td>
+              <tr>
+                <td>Data 1</td>
+                <td>Data 2</td>
+                <td>Data 3</td>
               </tr>
               <tr>
-                <th scope="row">2</th>
-                <td>Cell</td>
-                <td>Cell</td>
-                <td>Cell</td>
-                <td>Cell</td>
+                <td>Data A</td>
+                <td>Data B</td>
+                <td>Data C</td>
               </tr>
-              <tr>
-                <th scope="row">3</th>
-                <td>Cell</td>
-                <td>Cell</td>
-                <td>Cell</td>
-                <td>Cell</td>
-                </tr>
-              <tr>
-                <th scope="row">4</th>
-                <td>Cell</td>
-                <td>Cell</td>
-                <td>Cell</td>
-                <td>Cell</td>
-                </tr>
-              <tr>
-                <th scope="row">5</th>
-                <td>Cell</td>
-                <td>Cell</td>
-                <td>Cell</td>
-                <td>Cell</td>
-                </tr>
-              <tr>
-           </tbody>
+            </tbody>
           </table>
         </div>
       </section>
