--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
           <table>
             <thead>
               <tr>
-                <th>Header 1</th>
-                <th>Header 2</th>
-                <th>Header 3</th>
+                <th>File icon</th>
+                <th>File name</th>
+                <th>File type</th>
+                <th>File size</th>
               </tr>
             </thead>
             <tbody>
@@ -28,6 +29,16 @@
                 <td>Data 1</td>
                 <td>Data 2</td>
                 <td>Data 3</td>
+              </tr>
+              <tr>
+                <td>Data A</td>
+                <td>Data B</td>
+                <td>Data C</td>
+              </tr>
+              <tr>
+                <td>Data A</td>
+                <td>Data B</td>
+                <td>Data C</td>
               </tr>
               <tr>
                 <td>Data A</td>
