--- a/index.html
+++ b/index.html
@@ -26,24 +26,34 @@
             </thead>
             <tbody>
               <tr>
-                <td>Data 1</td>
+                <td><img src="file-solid-full.svg" alt="icon" width="10" height="10"</td>
                 <td>Data 2</td>
                 <td>Data 3</td>
+                <td>Data 4</td>
               </tr>
               <tr>
                 <td>Data A</td>
                 <td>Data B</td>
                 <td>Data C</td>
+                <td>Data D</td>
               </tr>
               <tr>
                 <td>Data A</td>
                 <td>Data B</td>
                 <td>Data C</td>
+                <td>Data D</td>
               </tr>
               <tr>
                 <td>Data A</td>
                 <td>Data B</td>
                 <td>Data C</td>
+                <td>Data D</td>
+              </tr>
+              <tr>
+                <td>Data A</td>
+                <td>Data B</td>
+                <td>Data C</td>
+                <td>Data D</td>
               </tr>
             </tbody>
           </table>
