--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </thead>
             <tbody>
               <tr>
-                <td><img src="<i class="fa-solid fa-file"></i>" alt="icon" width="10" height="10"</td>
+                <td> <i class="fa-regular fa-file"></i></td>
                 <td>Data 2</td>
                 <td>Data 3</td>
                 <td>Data 4</td>
