file adde small change

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </thead>
             <tbody>
               <tr>
-                <td> <i class="fa-regular fa-file"></i></td>
+                <td><img src ="file-solid-full (1).svg"></td>
                 <td>Data 2</td>
                 <td>Data 3</td>
                 <td>Data 4</td>
