--- a/index.html
+++ b/index.html
@@ -27,33 +27,33 @@
             <tbody>
               <tr>
                 <td><img src ="file-solid-full (1).svg"></td>
-                <td>Data 2</td>
-                <td>Data 3</td>
-                <td>Data 4</td>
+                <td>PNG</td>
+                <td>(.png)</td>
+                <td>size</td>
               </tr>
               <tr>
-                <td>Data A</td>
-                <td>Data B</td>
-                <td>Data C</td>
-                <td>Data D</td>
+                <td><img src ="HTML ICON.svg"></td>
+                <td>HTML</td>
+                <td>(.html)</td>
+                <td>size </td>
               </tr>
               <tr>
-                <td>Data A</td>
-                <td>Data B</td>
-                <td>Data C</td>
-                <td>Data D</td>
+                <td><img src ="JSON ICON.svg"></td>
+                <td>JavaScript Object Notation</td>
+                <td>(.json)</td>
+                <td>size</td>
               </tr>
               <tr>
-                <td>Data A</td>
-                <td>Data B</td>
-                <td>Data C</td>
-                <td>Data D</td>
+                <td><img src ="PLAINTEXT ICON.svg"></td>
+                <td>Plaintext/td>
+                <td>(.txt)</td>
+                <td>size</td>
               </tr>
               <tr>
-                <td>Data A</td>
-                <td>Data B</td>
-                <td>Data C</td>
-                <td>Data D</td>
+                <td><img src ="PDF ICON.svg"></td>
+                <td>Portable Document Format</td>
+                <td>(.pdf)</td>
+                <td>size</td>
               </tr>
             </tbody>
           </table>
