--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  </head>
 <body>
   <tbody>
-  <section id="tables">
+  <section id="Table">
         <h2>Tables</h2>
         <div class="overflow-auto">
           <table>
@@ -27,7 +27,7 @@
             <tbody>
               <tr>
                 <td><img src ="file-solid-full (1).svg"></td>
-                <td>PNG</td>
+                <td><a href = "windows-icon-png-19.png"> PNG</a></td>
                 <td>(.png)</td>
                 <td>size</td>
               </tr>
