--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               </tr>
               <tr>
                 <td><img src ="HTML ICON.svg"></td>
-                <td>HTML</td>
+                <td><a href = "Assignment.HTML"> HTML</a></td>
                 <td>(.html)</td>
                 <td>size </td>
               </tr>
