--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
               </tr>
               <tr>
                 <td><img src ="JSON ICON.svg"></td>
-                <td>JavaScript Object Notation</td>
+                <td><a href = "Assignment.json">JavaScript Object Notation</a> </td>
                 <td>(.json)</td>
                 <td>size</td>
               </tr>
               <tr>
                 <td><img src ="PLAINTEXT ICON.svg"></td>
-                <td>Plaintext/td>
+                <td><a href ="Assignment.txt"> Plaintext</a></td>
                 <td>(.txt)</td>
                 <td>size</td>
               </tr>
               <tr>
                 <td><img src ="PDF ICON.svg"></td>
-                <td>Portable Document Format</td>
+                <td><a href ="Assignment.pdf">Portable Document Format</a></td>
                 <td>(.pdf)</td>
                 <td>size</td>
               </tr>
