--- a/index copy.html
+++ b/index copy.html
@@ -15,7 +15,7 @@
   <section id="Table">
         <h2>Tables</h2>
         <div class="overflow-auto">
-          <table border = (1)>
+          <table>
             <thead>
               <tr>
                 <th>File icon</th>
@@ -29,7 +29,7 @@
                 <td><img src ="file-solid-full (1).svg"></td>
                 <td><a href = "windows-icon-png-19.png"> PNG</a></td>
                 <td>(.png)</td>
-                <td>706 KB</td>
+                <td>size</td>
               </tr>
               <tr>
                 <td><img src ="HTML ICON.svg"></td>
@@ -53,7 +53,7 @@
                 <td><img src ="PDF ICON.svg"></td>
                 <td><a href ="Assignment.pdf">Portable Document Format</a></td>
                 <td>(.pdf)</td>
-                <td>40 KB</td>
+                <td>size</td>
               </tr>
             </tbody>
           </table>
