--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <section id="Table">
         <h2>Tables</h2>
         <div class="overflow-auto">
-          <table border = (1)>
+          <table border = "1">
             <thead>
               <tr>
                 <th>File icon</th>
