--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <section id="Table">
         <h2>Tables</h2>
         <div class="overflow-auto">
-          <table border = "4">
+          <table border = "7">
             <thead>
               <tr>
                 <th>File icon</th>
@@ -26,7 +26,7 @@
             </thead>
             <tbody>
               <tr>
-                <td><img src ="file-solid-full (1).svg"></td>
+                <td><img src ="file-solid-full (1).svg"> width = 100px</a></td>
                 <td><a href = "windows-icon-png-19.png"> PNG</a></td>
                 <td>(.png)</td>
                 <td>706 KB</td>
