--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </thead>
             <tbody>
               <tr>
-                <td><img src ="file-solid-full (1).svg"> width = 100px</a></td>
+                <td><img src ="file-solid-full (1).svg" Width=100px  ></a></td>
                 <td><a href = "windows-icon-png-19.png"> PNG</a></td>
                 <td>(.png)</td>
                 <td>706 KB</td>
