--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <tbody>
   <section id="Table">
-        <h2>Tables</h2>
+        <h2>Table</h2>
         <div class="overflow-auto">
           <table border = "7">
             <thead>
@@ -32,25 +32,25 @@
                 <td>706 KB</td>
               </tr>
               <tr>
-                <td><img src ="HTML ICON.svg"></td>
+                <td><img src ="HTML ICON.svg" Width=100px></td>
                 <td><a href = "Assignment.HTML"> HTML</a></td>
                 <td>(.html)</td>
                 <td>1 KB </td>
               </tr>
               <tr>
-                <td><img src ="JSON ICON.svg"></td>
+                <td><img src ="JSON ICON.svg" Width=100px></td>
                 <td><a href = "Assignment.json">JavaScript Object Notation</a> </td>
                 <td>(.json)</td>
                 <td>182 bytes</td>
               </tr>
               <tr>
-                <td><img src ="PLAINTEXT ICON.svg"></td>
+                <td><img src ="PLAINTEXT ICON.svg" Width=100px></td>
                 <td><a href ="Assignment.txt"> Plaintext</a></td>
                 <td>(.txt)</td>
                 <td>23 bytes</td>
               </tr>
               <tr>
-                <td><img src ="PDF ICON.svg"></td>
+                <td><img src ="PDF ICON.svg" Width=100px></td>
                 <td><a href ="Assignment.pdf">Portable Document Format</a></td>
                 <td>(.pdf)</td>
                 <td>40 KB</td>
