--- a/index.html
+++ b/index.html
@@ -26,31 +26,31 @@
             </thead>
             <tbody>
               <tr>
-                <td><img src ="file-solid-full (1).svg" Width=100px  ></a></td>
+                <td><img src ="file-solid-full (1).svg" Width=70px  ></a></td>
                 <td><a href = "windows-icon-png-19.png"> PNG</a></td>
                 <td>(.png)</td>
                 <td>706 KB</td>
               </tr>
               <tr>
-                <td><img src ="HTML ICON.svg" Width=100px></td>
+                <td><img src ="HTML ICON.svg" Width=70px></td>
                 <td><a href = "Assignment.HTML"> HTML</a></td>
                 <td>(.html)</td>
                 <td>1 KB </td>
               </tr>
               <tr>
-                <td><img src ="JSON ICON.svg" Width=100px></td>
+                <td><img src ="JSON ICON.svg" Width=70px></td>
                 <td><a href = "Assignment.json">JavaScript Object Notation</a> </td>
                 <td>(.json)</td>
                 <td>182 bytes</td>
               </tr>
               <tr>
-                <td><img src ="PLAINTEXT ICON.svg" Width=100px></td>
+                <td><img src ="PLAINTEXT ICON.svg" Width=70px></td>
                 <td><a href ="Assignment.txt"> Plaintext</a></td>
                 <td>(.txt)</td>
                 <td>23 bytes</td>
               </tr>
               <tr>
-                <td><img src ="PDF ICON.svg" Width=100px></td>
+                <td><img src ="PDF ICON.svg" Width=70px></td>
                 <td><a href ="Assignment.pdf">Portable Document Format</a></td>
                 <td>(.pdf)</td>
                 <td>40 KB</td>
@@ -60,7 +60,9 @@
         </div>
       </section>
 </body>
-hiiiiiiiiiiiiiiiiiii
+- My first observation that I noticed is that my HTML file, Plaintext, and PDF file rendered perfectly and fast
+- My second observation that I noticed is that my example json file took a longer time rendering but is now fine.
+- My third observation that I noticed is that my browser handled the png example file well and it rendered nicely
 </html>
  
 
