--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <section id="Table">
         <h2>Table</h2>
         <div class="overflow-auto">
-          <table border = "14">
+          <table border = "5">
             <thead>
               <tr>
                 <th>File icon</th>
@@ -60,14 +60,14 @@
         </div>
       </section>
 </body>
-- My first observation that I noticed is that my HTML file, Plaintext, and PDF file rendered perfectly and fast
+<ul>
+      <li>- My first observation that I noticed is that my HTML file, Plaintext, and PDF file rendered perfectly and fast.
+</li>
+      <li>- My second observation that I noticed is that my example json file took a longer time rendering but is now fine.
+</li>
+      <li>- My third observation that I noticed is that my browser handled the png example file well and it rendered nicely.</li>
+    </ul>
 
-
-- My second observation that I noticed is that my example json file took a longer time rendering but is now fine.
-
-
-
-- My third observation that I noticed is that my browser handled the png example file well and it rendered nicely
 </html>
  
 
