--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <section id="Table">
         <h2>Table</h2>
         <div class="overflow-auto">
-          <table border = "5">
+          <table border = "7">
             <thead>
               <tr>
                 <th>File icon</th>
@@ -61,11 +61,11 @@
       </section>
 </body>
 <ul>
-      <li>- My first observation that I noticed is that my HTML file, Plaintext, and PDF file rendered perfectly and fast.
+      <li> My first observation that I noticed is that my HTML file, Plaintext, and PDF file rendered perfectly and fast.
 </li>
-      <li>- My second observation that I noticed is that my example json file took a longer time rendering but is now fine.
+      <li> My second observation that I noticed is that my example json file took a longer time rendering but is now fine.
 </li>
-      <li>- My third observation that I noticed is that my browser handled the png example file well and it rendered nicely.</li>
+      <li> My third observation that I noticed is that my browser handled the png example file well and it rendered nicely.</li>
     </ul>
 
 </html>
