--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <tbody>
               <tr>
                 <td><img src ="file-solid-full (1).svg" Width=70px  ></a></td>
-                <td><a href = "windows-icon-png-19.png"> PNG- windows-icon-png-19</a></td>
+                <td><a href = "windowsicon.png"> PNG-windowsicon.png</a></td>
                 <td>(.png)</td>
                 <td>706 KB</td>
               </tr>
