--- a/index.html
+++ b/index.html
@@ -27,33 +27,33 @@
             <tbody>
               <tr>
                 <td><img src ="file-solid-full (1).svg" Width=70px  ></a></td>
-                <td><a href = "windowsicon.png"> PNG-windowsicon.png</a></td>
+                <td><a href = "windowsicon.png"> PNG(windowsicon.png)</a></td>
                 <td>(.png)</td>
                 <td>706 KB</td>
               </tr>
               <tr>
                 <td><img src ="HTML ICON.svg" Width=70px></td>
-                <td><a href = "Assignment.HTML"> HTML- Assignment.HTML</a></td>
+                <td><a href = "Assignment.HTML"> HTML(Assignment.HTML)</a></td>
                 <td>(.html)</td>
                 <td>1 KB </td>
               </tr>
               <tr>
                 <td><img src ="JSON ICON.svg" Width=70px></td>
-                <td><a href = "Assignment.json">JavaScript Object Notation- Assignment.json</a> </td>
-                <td>(.json)</td>
+                <td><a href = "Assignment.json">JavaScript Object Notation(Assignment.json)</a> </td>
+                <td>()(.json)</td>
                 <td>182 bytes</td>
               </tr>
               <tr>
                 <td><img src ="PLAINTEXT ICON.svg" Width=70px></td>
-                <td><a href ="Assignment.txt"> Plaintext- Assignment.txt</a></td>
+                <td><a href ="Assignment.txt"> Plaintext(Assignment.txt)</a></td>
                 <td>(.txt)</td>
                 <td>23 bytes</td>
               </tr>
               <tr>
                 <td><img src ="PDF ICON.svg" Width=70px></td>
-                <td><a href ="Assignment.pdf">Portable Document Format- Assignment.pdf</a></td>
+                <td><a href ="Assignment.pdf" >Portable Document Format(Assignment.pdf)</a></td>
                 <td>(.pdf)</td>
-                <td>40 KB</td>
+                <td>15 KB</td>
               </tr>
             </tbody>
           </table>
