--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <tr>
                 <td><img src ="JSON ICON.svg" Width=70px></td>
                 <td><a href = "Assignment.json">JavaScript Object Notation(Assignment.json)</a> </td>
-                <td>()(.json)</td>
+                <td>(.json)</td>
                 <td>182 bytes</td>
               </tr>
               <tr>
