--- a/Assignment.HTML
+++ b/Assignment.HTML
@@ -11,14 +11,12 @@
 <body>
   <p id="demo"></p>
 <p class="p1">This is my HTML page<span class="Apple-converted-space"> </span></p>
+
 <script>       
 const obj = json.parse(text);
-document.getElementById("demo").innerHTML = obj.employee[1].firstName;
-
-
-
+document.getElementById("demo").innerHTML = obj.employee[1].firstName + " " + obj.employee[1].lastName;
 </script> 
-
+test
 
 
 
